# eduspace-edge-api

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.specify/: feature.json
.specify/extensions/: .registry
.specify/extensions/git/: extension.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: backend-integration-guide.md
docs/arduino/EduSpaceV1/: EduSpaceV1.ino
docs/postman/: eduspace-edge-api.postman_collection.json
docs/wokwi/EduSpaceV1/: README.md  diagram.json  sketch.ino  wokwi-project.txt
specs/001-classroom-sensor-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-classroom-sensor-ingestion/checklists/: requirements.md
specs/001-classroom-sensor-ingestion/contracts/: sensor-readings.openapi.yaml
src/: app.py  config.py  db.py
src/device_auth/application/: authenticator.py  seed_test_device.py
src/device_auth/domain/: device.py
src/shared/: clock.py  errors.py  threshold_config.py  zone_thresholds.py
tests/: conftest.py
tests/acceptance/: conftest.py  test_classroom_sensor_ingestion_steps.py  test_device_authentication_and_validation_steps.py  test_offline_buffering_and_forwarding_steps.py
tests/contract/: test_sensor_readings_contract.py
tests/integration/: conftest.py  test_auth_failures.py  test_ingestion_endpoint.py  test_offline_buffering.py  test_retry_forwarding.py  test_seed_test_device.py  test_validation_errors.py
(+24 files in other folders)
